--- a/MLProject1_Wine_Quality_Prediction.ipynb
+++ b/MLProject1_Wine_Quality_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF1pIIEqpDBhBmf4iCeU46",
+      "authorship_tag": "ABX9TyMGBwjP2RE+ORkbvuuvCx6L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,15 +72,6 @@
       },
       "execution_count": 35,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
-      "metadata": {
-        "id": "b8e-fFw0nm4A"
-      }
     },
     {
       "cell_type": "code",
@@ -1417,7 +1408,6 @@
       "cell_type": "markdown",
       "source": [
         "Model Training:\n",
-        "\n",
         "Random Forest Classifier"
       ],
       "metadata": {
@@ -1862,22 +1852,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model Evaluation"
+        "Model Evaluation\n",
+        "Accuracy"
       ],
       "metadata": {
         "id": "8rCKJpjE2yAP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "Accuracy Store\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "Dx1cIjet22R8"
       }
     },
     {
