--- a/MLProject1_Wine_Quality_Prediction.ipynb
+++ b/MLProject1_Wine_Quality_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGBwjP2RE+ORkbvuuvCx6L",
+      "authorship_tag": "ABX9TyP9B866rqnNi1u00VMe4PDE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1383,7 +1383,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=2)\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X.values, Y, test_size=0.2, random_state=2)\n",
         "print(Y.shape, Y_train.shape, Y_test.shape)"
       ],
       "metadata": {
@@ -1391,9 +1391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dHb04vHg0VBX",
-        "outputId": "c60d0b89-02de-4887-c0c2-4fd9855b5518"
+        "outputId": "84aa999b-ef6a-4123-ce8e-fb0fd18a234e"
       },
-      "execution_count": 49,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1418,7 +1418,7 @@
       "cell_type": "code",
       "source": [
         "model = RandomForestClassifier()\n",
-        "model.fit(X_train, Y_train)\n"
+        "model.fit(X_train, Y_train.values)\n"
       ],
       "metadata": {
         "id": "FLqnyD681GsJ"
@@ -1446,7 +1446,7 @@
       "metadata": {
         "id": "GBHO5ZES2vR4"
       },
-      "execution_count": 51,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -1459,9 +1459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KaHpxV_X2vOZ",
-        "outputId": "247dc68d-5d57-4d44-8990-fcce4f74559e"
+        "outputId": "42fff2ae-28e9-4e3d-dd72-9c670d2d7e86"
       },
-      "execution_count": 52,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -1484,7 +1484,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input_data = (7.5,0.5,0.36,6.1,0.071,17.0,102,0.9978,3.35,0.8,1005)\n",
+        "input_data = (7.5,0.5,0.36,6.1,0.071,17.0,102,0.9978,3.35,0.8,10.5)\n",
         "\n",
         "#changing the input data to a numpy array\n",
         "input_data_as_numpy_array = np.asarray(input_data)\n",
@@ -1505,9 +1505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CP77_wid3it_",
-        "outputId": "2d6500ad-6e33-4e09-8352-89c7491ae0e4"
+        "outputId": "151dad86-d43f-432d-e5fc-a02743a9d788"
       },
-      "execution_count": 53,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -1515,14 +1515,6 @@
           "text": [
             "[0]\n",
             "Bad Quality Wine\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
